trunk/Archive2/f5/220236d22af651/output
main.cpp: In function 'int main()':
main.cpp:42:12: error: conversion from 'B' to non-scalar type 'C' requested
     C c2 = b1; 
            ^
